src/snapshots/cargo_vet__tests__mock-builtin-complex-full-audited.snap
---
source: src/tests.rs
assertion_line: 1425
expression: stdout
---
Vetting Succeeded (10 fully audited, 0 partially audited, 0 unaudited)

