src/snapshots/cargo_vet__tests__mock-builtin-complex-inited.snap
---
source: src/tests.rs
assertion_line: 1399
expression: stdout
---
Vetting Succeeded (6 fully audited, 0 partially audited, 4 unaudited)

