src/snapshots/cargo_vet__tests__mock-builtin-complex-minimal-audited.snap
---
source: src/tests.rs
assertion_line: 1517
expression: stdout
---
Vetting Succeeded (4 fully audited)

