src/snapshots/cargo_vet__tests__mock-builtin-simple-full-audited.snap
---
source: src/tests.rs
assertion_line: 750
expression: stdout
---
Vetting Succeeded (5 fully audited, 0 partially audited, 0 unaudited)

