src/snapshots/cargo_vet__tests__mock-builtin-simple-init.snap
---
source: src/tests.rs
assertion_line: 761
expression: stdout
---
Vetting Succeeded (3 unaudited)

