src/snapshots/cargo_vet__tests__mock-builtin-simple-no-unaudited.snap
---
source: src/tests.rs
assertion_line: 735
expression: stdout
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]
  third-party2:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect third-party1 10.0.0  (used by first-party)  (100 lines)
    cargo vet inspect third-party2 10.0.0  (used by first-party)  (100 lines)

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

