src/snapshots/cargo_vet__tests__mock-complex-core10-partially-too-weak-via-weak-delta.snap
---
source: src/tests.rs
assertion_line: 1394
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-core:10.0.0 missing ["reviewed"]

recommended audits:
    third-core:(5.0.0 -> 10.0.0)  for reviewed  (+75)  (used by firstB, thirdA, thirdAB) 

estimated review backlog: 75 lines

Use |cargo vet certify| to record the audits.

